force-app/main/default/objects/Related_Influencer__c/Related_Influencer__c.object-meta.xml
<CustomObject>
    <description>This object is created after feedback, it is related to the influencer functionality</description>
    <label>Related Influencer</label>
    <nameField>
        <displayFormat>RI-{000000}</displayFormat>
        <label>Related Influencer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Influencers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>