force-app/main/default/objects/Related_Influencer__c/fields/Influencer_Account__c.field-meta.xml
<CustomField>
    <fullName>Influencer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be used to related Influence.</description>
    <label>Influencer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Influencers</relationshipLabel>
    <relationshipName>Related_Influencers</relationshipName>
    <type>Lookup</type>
</CustomField>