force-app/main/default/objects/Related_Influencer__c/fields/Related_Influencer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_Influencer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be used to related contact of influncer account</description>
    <label>Related Influencer Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RelatedInfluencerAccount__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Related Influencers</relationshipLabel>
    <relationshipName>Related_Influencers_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>