force-app/main/default/objects/Related_Influencer__c/fields/RelatedInfluencerAccount__c.field-meta.xml
<CustomField>
    <fullName>RelatedInfluencerAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Influencer Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeDeveloperName__c</field>
            <operation>equals</operation>
            <value>Influencer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Influencers (Related Influencer Account)</relationshipLabel>
    <relationshipName>RelatedInfluencerAccount</relationshipName>
    <type>Lookup</type>
</CustomField>