force-app/main/default/objects/Related_Influencer__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>This field was created after feedback incorporation</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Designer</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Engineer</fullName>
            </value>
            <value>
                <fullName>Hotel / Hotel Group</fullName>
            </value>
            <value>
                <fullName>Installer / Plumber</fullName>
            </value>
            <value>
                <fullName>Interior Designer</fullName>
            </value>
            <value>
                <fullName>Mechanical Contractor</fullName>
            </value>
            <value>
                <fullName>Owner /Developer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>